--- a/POC_BottomSheetDialog/Droid/POC_BottomSheetDialog.Droid.csproj
+++ b/POC_BottomSheetDialog/Droid/POC_BottomSheetDialog.Droid.csproj
@@ -95,6 +95,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BottomSheetDialogListView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -110,8 +111,9 @@
     <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
-    <AndroidResource Include="Resources\layout\bottom_sheet_dialog.axml" />
+    <AndroidResource Include="Resources\layout\static_bottom_sheet_dialog.axml" />
     <AndroidResource Include="Resources\drawable\icon_arrow_down.png" />
+    <AndroidResource Include="Resources\layout\list_view_bottom_sheet_dialog.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
